# IrisVk

./: .gitignore  .gitmodules  CMakeLists.txt
include/iris/: iris.hpp
include/iris/core/: enums.hpp  forwards.hpp  hash.hpp  intrusive_atomic_ptr.hpp  macros.hpp  platform.hpp  types.hpp  utilities.hpp
include/iris/gfx/: buffer.hpp  cache.hpp  clear_value.hpp  command_buffer.hpp  command_pool.hpp  deletion_queue.hpp  descriptor_layout.hpp  descriptor_pool.hpp  descriptor_set.hpp  device.hpp  fence.hpp  frame_counter.hpp  framebuffer.hpp  image.hpp  instance.hpp  pipeline.hpp  queue.hpp  render_pass.hpp  sampler.hpp  semaphore.hpp  sparse_page_allocator.hpp  swapchain.hpp  texture.hpp
include/iris/nvidia/: ngx_wrapper.hpp
include/iris/wsi/: input.hpp  wsi_platform.hpp
include/renderer/core/: application.hpp  camera.hpp  model.hpp  utilities.hpp
shaders/: buffer.glsl  common.glsl  compile.bat  data.glsl  intrinsics.glsl  utilities.glsl
shaders/0.1/: cluster_area.comp  cull_classify.comp  depth_copy.comp  depth_reduce.comp  final.frag  final.vert  hiz_copy.comp  hiz_reduce.comp  main.frag  main.mesh.glsl  main.task.glsl  main.vert  rasterizer.comp  shadow_page_reduce.comp  shadow_page_request.comp
shaders/gui/: viewer.comp.glsl
shaders/shadow/: common.glsl  copy_depth.comp.glsl  main.frag.glsl  main.mesh.glsl  make_cascade.comp.glsl  reduce_depth.comp.glsl
shaders/visbuffer/: common.glsl  main.frag.glsl  main.mesh.glsl  resolve.comp.glsl  tonemap.comp.glsl
shaders/vsm/: allocate_pages.comp.glsl  common.glsl  cull_active_pages.comp.glsl  free_pages.comp.glsl  make_allocation_requests.comp.glsl  mark_visible_pages.comp.glsl  rasterize_hardware.frag.glsl  rasterize_hardware.mesh.glsl  reduce_page_table.comp.glsl
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  model.cpp  model.hpp  utilities.hpp
src/core/: intrusive_atomic_ptr.cpp
src/gfx/: instance.cpp
src/iris/core/: intrusive_atomic_ptr.cpp
src/iris/gfx/: command_buffer.cpp  command_pool.cpp  deletion_queue.cpp  descriptor_layout.cpp  descriptor_pool.cpp  descriptor_set.cpp  device.cpp  fence.cpp  frame_counter.cpp  framebuffer.cpp  image.cpp  instance.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  sparse_page_allocator.cpp  swapchain.cpp  texture.cpp
src/iris/nvidia/: ngx_wrapper.cpp
src/iris/wsi/: input.cpp  wsi_platform.cpp
src/renderer/core/: application.cpp  camera.cpp  model.cpp
